--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -749,9 +749,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "semseg",
+   "display_name": "torch2.1",
    "language": "python",
-   "name": "semseg"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -763,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
