--- a/notebooks/scarp.ipynb
+++ b/notebooks/scarp.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "model = UNet(conf).to('cuda:0')\n",
     "\n",
-    "if conf.GPU_COUNT > 1:\n",
+    "if CONF.NUM_GPU > 1:\n",
     "    model.load_state_dict({key.replace(f'module.',''): value for key, value in torch.load(conf.MDL_PATH)['state_dict'].items()})\n",
     "else:\n",
     "    model.load_state_dict(torch.load(conf.MDL_PATH)['state_dict'])"
