--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -92,6 +92,35 @@
     "\n",
     "plotter(x, [y, y1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = 'x' in 'alt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var"
+   ]
   }
  ],
  "metadata": {
