--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -44,12 +44,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "41f6853b",
    "metadata": {},
    "outputs": [],
    "source": [
     "loader = DatasetTools.predict_dataloader(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ef13cf48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for batch in loader:\n",
+    "    ids = batch['id']\n",
+    "    input = batch['image']\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3ec72c4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 1, 512, 512])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input.shape"
    ]
   },
   {
