--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Configuration file passed all validation tests.\n"
+      "[INFO] Configuration file passed all validation tests.\n",
+      "[WARN]: Experiment directory 'saved\\exp_0' contains files matching RUN_ID 'MobaNet_ED_full'; they will be overwritten.\n"
      ]
     }
    ],
@@ -37,10 +38,67 @@
     "\n",
     "from model.MobaNet import MobaNet\n",
     "\n",
-    "cfg  = Config('configs/config.yaml', inference = True, cli = False)\n",
+    "cfg  = Config('configs/config.yaml', inference = False, cli = False)\n",
     "cfg.RANK = 0\n",
     "\n",
     "from predict import Predictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a03989c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Config {'DATASET_DIR': WindowsPath('D:/DataStorage/SemSeg/ver1'), 'RESULTS_DIR': WindowsPath('saved'), 'SEED': 13, 'TRAIN_SET': 'full', 'TEST_SET': 'full', 'TEST_SPLIT': 0.15, 'CROSS_VALIDATION': False, 'DEFAULT_FOLD': 0, 'NUM_WORKERS': 1, 'MODEL': 'MobaNet_ED', 'CHECKPOINT': None, 'INPUT_SIZE': 512, 'INPUT_CHANNELS': 1, 'UNET_DEPTH': 5, 'CONV_DEPTH': 16, 'BATCH_SIZE': 16, 'SEG_CLASSES': 2, 'SEG_DROPOUT': 0.1, 'CLS_CLASSES': 3, 'CLS_DROPOUT': 0.3, 'CLS_THRESHOLD': 0.7, 'INIT_LR': 1e-05, 'BASE_LR': 0.0001, 'L2_DECAY': 1e-05, 'WARMUP_EPOCHS': 10, 'TRAIN_EPOCHS': 200, 'SDM_KERNEL_SIZE': 7, 'SDM_DISTANCE': 'chebyshev', 'SDM_NORMALIZATION': 'minmax', 'SDM_SMOOTHING': False, 'SDM_SMOOTHING_ALPHA': 15.0, 'LOSS': 'SoftDICE', 'ADAPTIVE_WEIGHTS': False, 'STATIC_WEIGHTS': None, 'CLAMP_DELTA': 0.2, 'SIGMOID_STEEPNESS': 1000, 'SAVE_MODEL': True, 'EVAL_INTERVAL': 1, 'EVAL_METRIC': 'TTR', 'CMA_COEFFICIENTS': {'DSC': 1, 'IoU': 1, 'ASD': 0, 'AD': 0, 'HD95': 0, 'D95': 0}, 'DISTANCE_METRICS': False, 'GPUs': [0], 'MASTER_ADDR': 'localhost', 'MASTER_PORT': 12355, 'NCCL_P2P': True, 'LOG_WANDB': True, 'LOG_LOCAL': True, 'EXP_ID': 'exp_0', 'RUN_ID': 'MobaNet_ED_full', 'DEFAULT_DEVICE': 'cuda:0', 'TRAIN_DIR': WindowsPath('D:/DataStorage/SemSeg/ver1/train'), 'IMG_DIR': WindowsPath('D:/DataStorage/SemSeg/ver1/train/images'), 'MSK_DIR': WindowsPath('D:/DataStorage/SemSeg/ver1/train/masks'), 'SDM_DIR': WindowsPath('D:/DataStorage/SemSeg/ver1/train/sdms'), 'LBL_JSON': WindowsPath('D:/DataStorage/SemSeg/ver1/train/labels.json'), 'EXP_DIR': WindowsPath('saved/exp_0'), 'TTS_JSON': WindowsPath('saved/tts.json'), 'LOG_JSON': WindowsPath('saved/exp_0/MobaNet_ED_full-log.json'), 'BEST_EPOCH_JSON': WindowsPath('saved/exp_0/MobaNet_ED_full-best.json'), 'MODEL_PTH': WindowsPath('saved/exp_0/MobaNet_ED_full-model.pth'), 'NUM_KFOLDS': 6, 'WORLD_SIZE': 1, 'FREEZE_LAYERS': ['classifier'], 'RANK': 0}>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0f8a5a2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = {'A': 1, 'B': 2, 'C': 3, 'D': 4}\n",
+    "\n",
+    "def testfun(_a = None, *, b = None, c = None, d = None):\n",
+    "   print(locals())\n",
+    "   for param, value in locals().items():\n",
+    "      if not param.startswith('_') and value is not None:\n",
+    "         cfg[param.upper()] = value\n",
+    "   print(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "91e7598a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_a': 10, 'b': None, 'c': None, 'd': None}\n",
+      "{'A': 1, 'B': 2, 'C': 3, 'D': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "testfun(_a = 10)"
    ]
   },
   {
